--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,4 +1,4 @@
-<as-split direction="vertical" unit="percent" >
+<as-split direction="vertical" unit="percent">
   <as-split-area [size]="70" class="main">
     <mat-card class="card">
       <mat-form-field class="expression-form-field" appearance="fill" floatLabel="never" color="primary">
@@ -9,25 +9,49 @@
         </button>
       </mat-form-field>
     </mat-card>
+    <mat-card class="result" *ngFor="let result of results.slice().reverse(); let first = first; 
+    let last = last" [ngClass]="{ 'first' : first }">
+      {{result}}
+    </mat-card>
   </as-split-area>
   <as-split-area [size]="30" >
     <as-split direction="horizontal" unit="percent">
-      <as-split-area [size]="10">
-        
+      <as-split-area style="overflow-y: auto; padding: 1rem;" [size]="10">
+        <button mat-raised-button color="primary" (click)="openDialog()" class="add">Add</button>
+        <div class="acccon">
+        <mat-accordion class="acc">
+          <cdk-virtual-scroll-viewport itemSize="50" class="cdkv">
+          <mat-expansion-panel togglePosition="before" *ngFor="let operation of operations" (opened)="currentOperation=operation">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                {{operation.Name}}
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>
+              <mat-form-field class="argcount-form-field" appearance="fill" floatLabel="never" color="primary">
+                <mat-label>Arguments count</mat-label>
+                <input matInput type="text" [(ngModel)]="operation.ArgumentsCount" autocomplete="off">                
+              </mat-form-field>
+            </p>
+          </mat-expansion-panel>    
+        </cdk-virtual-scroll-viewport>      
+        </mat-accordion>
+      </div>
       </as-split-area>
       <as-split-area [size]="90">
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-          rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-          explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-          consequuntur magni dolores eodolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
-          tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
-          nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-          autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel
-          illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-        </p>
+        <div style="flex:1; display:flex; align-items: stretch; justify-content: stretch" *ngIf="currentOperation">
+        <pre *ngIf="true">
+          <code [highlight]="currentOperation.Code">
+          </code>
+        </pre>
+        <ace-editor *ngIf="false"  id="editor" [text]="currentOperation.Code" (textChanged)="onCodeChange($event)"></ace-editor>
+      </div>
       </as-split-area>          
     </as-split>      
   </as-split-area>          
 </as-split>
+
+<!--<button mat-fab color="primary" class="save" aria-label="Save operation" *ngIf="currentOperation" (click)="saveOperation()" [disabled]="!saveAvailable()">
+  <mat-icon>upload</mat-icon>
+</button>-->
       
